# obstacle_avoidance_ws

./: .gitmodules  README.md
src/drive-by-wire/dataspeed_can/: .hgtags
src/drive-by-wire/dataspeed_can/.hg/: dirstate  undo.desc  undo.dirstate
src/drive-by-wire/dataspeed_can/.hg/cache/: branch2-served  branchheads-base  branchheads-served  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags  tags2-visible
src/drive-by-wire/dataspeed_can/.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache
src/drive-by-wire/dataspeed_can/dataspeed_can/: CHANGELOG.rst  package.xml
src/drive-by-wire/dataspeed_can/dataspeed_can_msg_filters/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/drive-by-wire/dataspeed_can/dataspeed_can_msg_filters/include/dataspeed_can_msg_filters/: ApproximateTime.h
src/drive-by-wire/dataspeed_can/dataspeed_can_msg_filters/tests/: test.cpp
src/drive-by-wire/dataspeed_can/dataspeed_can_msgs/: CHANGELOG.rst  package.xml
src/drive-by-wire/dataspeed_can/dataspeed_can_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/drive-by-wire/dataspeed_can/dataspeed_can_usb/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/drive-by-wire/dbw_mkz_ros/dbw_mkz_can/: CMakeLists.txt
src/drive-by-wire/dbw_mkz_ros/dbw_mkz_msgs/: CMakeLists.txt
src/drive-by-wire/dbw_mkz_ros/dbw_mkz_vsi_controller/: CMakeLists.txt  package.xml
src/drive-by-wire/dbw_mkz_ros/dbw_mkz_vsi_controller/include/cf_hmi_include/: cf_packet.h  serial.h  show_packet.h
src/drive-by-wire/dbw_mkz_ros/dbw_mkz_vsi_controller/launch/: vsi_controller.launch
src/drive-by-wire/dbw_mkz_ros/dbw_mkz_vsi_controller/src/: Controller.cpp  Controller.h  controller_main.cpp  hmi_controller.cpp
src/jsoncpp-ros/: CMakeLists.txt  package.xml
src/perception/: .gitignore
src/ros_configs/scripts/: ros_configs.py
workflow/: ford_urban_ws.drawio
(+79 files in other folders)
